<resources>
    <string name="app_name">Medication Tracker</string>
    <string name="buttonFullList">View All Medications</string>
    <string name="pageHeading">Your Medications List</string>
    <string name="buttonHistoryDetail">Get Medication Details</string>
    <string name="pageHeading02">This Is History Details</string>
    <string name="welcomeMessage">Medication Tracker</string>
    <string name="hint_word">Medication Name...</string>
    <string name="button_save">Save Medication</string>
    <string name="empty_not_saved">Medication not saved because it is empty.</string>
    <string name="medName">Your Current Medication</string>
    <string name="newMed">Add New Medication</string>
    <string name="medication_details">Medication Details</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="remind_time">Remind Time</string>
    <string name="dose">Dosage</string>
    <string name="enterPassword">Enter Password</string>
    <string name="enterPasswordText">To get started please enter a passcode</string>
    <string name="enterPasswordButton">Submit</string>
    <string name="userPassword">Please enter your password</string>
    <string name="userPasswordHint">Enter Password</string>
    <string name="reSetPassword">Re-Set Password</string>
    <string name="newUserPassword">Enter Password</string>
    <string name="reEnterNewPassword">Please Re-enter your passcode</string>
    <string name="newUserPasswordText">Enter Password</string>
    <string name="reEnterNewPasswordTest">Re-enter Password</string>
    <string name="newEnterPasswordButton">Submit</string>
    <string name="cancelAllAlarms">Cancel All Alarms</string>
    <string name="newLogin">Welcome to Medication Tracker</string>
    <string name="login">Welcome Back</string>
    <string name="delete">Delete Medication</string>
    <string name="historyInst">Click on an item to view the details</string>
    <string name="homeButton">Back to Home</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="addMed">Enter a New Medication</string>
    <string name="forgotPasswordButton">Forgot Password?</string>
    <string name="favoriteColor"> What is you Favorite color?</string>
    <string name="colorQuestion">Favorite Color?</string>
    <string name="security_question">Enter Your favorite color as a security question</string>
    <string name="reset_question">Please enter your security question to reset your password</string>
    <string name="login_instructions">To reset password enter your current password then hit the reset password button</string>
    <string name="byline">Developed By Eric Mott, Alice Smith, and Richard Terry</string>
    <string name="project">CS 246 Class Project July 2019</string>

</resources>
